<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/main_input"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:textSize="50dp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/main_listen_btn"
            android:layout_width="fill_parent"
            android:layout_height="80dp"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@drawable/button_selector4"
            android:text="@string/main_listen_btn" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/main_level1_btn"
                android:layout_width="fill_parent"
                android:layout_height="80dp"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="1dp"
                android:layout_weight="1"
                android:background="@drawable/button_selector2"
                android:text="@string/main_level1_btn" />

            <Button
                android:id="@+id/main_level2_btn"
                android:layout_width="fill_parent"
                android:layout_height="80dp"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="1dp"
                android:layout_weight="1"
                android:background="@drawable/button_selector4"
                android:text="@string/main_level2_btn" />

            <Button
                android:id="@+id/main_level3_btn"
                android:layout_width="fill_parent"
                android:layout_height="80dp"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="1dp"
                android:layout_weight="1"
                android:background="@drawable/button_selector4"
                android:text="@string/main_level3_btn" />

            <Button
                android:id="@+id/main_level4_btn"
                android:layout_width="fill_parent"
                android:layout_height="80dp"
                android:layout_marginLeft="1dp"
                android:layout_weight="1"
                android:background="@drawable/button_selector4"
                android:text="@string/main_level4_btn" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/main_submit_btn"
            android:layout_width="fill_parent"
            android:layout_height="80dp"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@drawable/button_selector3"
            android:text="@string/main_submit_btn" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/main_clear_btn"
                android:layout_width="fill_parent"
                android:layout_height="80dp"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="1dp"
                android:layout_weight="1"
                android:background="@drawable/button_selector3"
                android:text="@string/main_clear_btn" />

            <Button
                android:id="@+id/main_answer_btn"
                android:layout_width="fill_parent"
                android:layout_height="80dp"
                android:layout_marginLeft="1dp"
                android:layout_weight="1"
                android:background="@drawable/button_selector3"
                android:text="@string/main_answer_btn" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>